Fixes: compare previous link margin with history records   was obviously too large

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -2101,7 +2101,8 @@ div.historyComment p {
 a.historyComparePrevious {
     border-top: 1px dotted #ccc;
     display: block;
-    margin-top: 3em;
+    margin-top: 1.5em;
+    margin-bottom: -0.5em;
     text-align: center;
 }
 
